Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37345

Item_func_nextval::val_int() crash on INSERT...SELECT with subqueries

    XMLWordPrintable

Details

    • Can result in hang or crash
    • Q4/2025 Server Maintenance, Q4/2025 Server Development

    Description

      Server segfaults with following backtrace on an INSERT...SELECT with subqueries in the SELECT part:

      /usr/sbin/mariadbd(my_print_stacktrace+0x2e)[0x562c359dc7ee]
      /usr/sbin/mariadbd(handle_fatal_signal+0x475)[0x562c354d17a5]
      /lib64/libpthread.so.0(+0x12d20)[0x7f97c9a87d20]
      /usr/sbin/mariadbd(Item_func_nextval::val_int()+0x1d3)[0x562c3553bb03]
      /usr/sbin/mariadbd(Item::save_int_in_field(Field*, bool)+0x1f)[0x562c354f6abf]
      /usr/sbin/mariadbd(Item::save_in_field(Field*, bool)+0x36)[0x562c354e8e06]
      /usr/sbin/mariadbd(TABLE::update_default_fields(bool)+0x9e)[0x562c353753fe]
      /usr/sbin/mariadbd(fill_record(THD*, TABLE*, List<Item>&, List<Item>&, bool, bool)+0x43e)[0x562c3522505e]
      /usr/sbin/mariadbd(fill_record_n_invoke_before_triggers(THD*, TABLE*, List<Item>&, List<Item>&, bool, trg_event_type)+0x3a)[0x562c3522524a]
      /usr/sbin/mariadbd(select_insert::send_data(List<Item>&)+0x27)[0x562c35250cf7]
      /usr/sbin/mariadbd(+0x870d94)[0x562c352e8d94]
      /usr/sbin/mariadbd(+0x84c33e)[0x562c352c433e]
      /usr/sbin/mariadbd(AGGR_OP::end_send()+0x1d9)[0x562c352f4af9]
      /usr/sbin/mariadbd(sub_select_postjoin_aggr(JOIN*, st_join_table*, bool)+0x40)[0x562c352f4d50]
      /usr/sbin/mariadbd(JOIN::exec_inner()+0xccf)[0x562c352fddff]
      /usr/sbin/mariadbd(JOIN::exec()+0x37)[0x562c352fe227]
      /usr/sbin/mariadbd(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*)+0x11a)[0x562c352fc5aa]
      /usr/sbin/mariadbd(handle_select(THD*, LEX*, select_result*, unsigned long long)+0x14b)[0x562c352fcd3b]
      /usr/sbin/mariadbd(mysql_execute_command(THD*, bool)+0x5154)[0x562c35291e4d]
      /usr/sbin/mariadbd(Prepared_statement::execute(String*, bool)+0x3df)[0x562c352afbbf]
      /usr/sbin/mariadbd(Prepared_statement::execute_loop(String*, bool, unsigned char*, unsigned char*)+0x9d)[0x562c352afe7d]
      /usr/sbin/mariadbd(+0x838dd5)[0x562c352b0dd5]
      /usr/sbin/mariadbd(mysqld_stmt_execute(THD*, char*, unsigned int)+0x2b)[0x562c352b0f7b]
      /usr/sbin/mariadbd(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool)+0x1475)[0x562c3528addd]
      /usr/sbin/mariadbd(do_command(THD*, bool)+0x12f)[0x562c3528c13d]
      /usr/sbin/mariadbd(do_handle_one_connection(CONNECT*, bool)+0x3f7)[0x562c353a2b17]
      /usr/sbin/mariadbd(handle_one_connection+0x5d)[0x562c353a2e5d]
      /usr/sbin/mariadbd(+0xc63fcd)[0x562c356dbfcd]
      /lib64/libpthread.so.0(+0x81ca)[0x7f97c9a7d1ca]
      /lib64/libc.so.6(clone+0x43)[0x7f97c8dbd8d3]
      
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              15 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.